# o3-deep-research-with-bing-search

./: .env.example  .gitignore  README.md  main.py  main_rest_api.py  pyproject.toml
logs/: session_20251205_165931.json  session_20251219_151022.json  session_20251219_152816.json  session_20251219_153525.json
output/: o3-deep-research-result_prompt1.md  o3-deep-research-result_prompt2.md  o3-deep-research-session_20251121_160958.md  o3-deep-research-session_20251219_154430.md
squence_diagram/: o3-deep-research-web-search-sequence.html  o3-deep-research-web-search-sequence.md
